Реализовал условию задачи